# gtk-xephyr-fullscreen

./: .gitignore  COPYING  Makefile  Makefile.am  autogen.sh  configure.ac  gtk-xephyr-fullscreen.c
